compiler/crates/graphql-ir/tests/parse/fixtures/enum-values.invalid.expected
==================================== INPUT ====================================
# expected-to-throw
query EnumValueQuery1 {
  me {
    profilePicture(preset: "LARGE") {
      # error: string not enum
      uri
    }
  }
}

query EnumValueQuery2 {
  me {
    profilePicture(preset: 128) {
      # error: int not enum
      uri
    }
  }
}

query EnumValueQuery3 {
  me {
    profilePicture(preset: [LARGE]) {
      # error: list of enum, not enum
      uri
    }
  }
}
==================================== ERROR ====================================
[31m✖︎ Expected value of type 'PhotoSize' to be a valid enum value, got string. Consider removing quotes.[0m

  [4menum-values.invalid.graphql[0m[2m:4:28[0m
[1m    3 │ [0m  me {
[1m    4 │ [0m    profilePicture(preset: [31m"[0m[31mL[0m[31mA[0m[31mR[0m[31mG[0m[31mE[0m[31m"[0m) {
      │ [31m                           ^^^^^^^[0m
[1m    5 │ [0m      # error: string not enum


[31m✖︎ Expected a value of type 'PhotoSize'[0m

  [4menum-values.invalid.graphql[0m[2m:13:28[0m
[1m   12 │ [0m  me {
   13 │     profilePicture(preset: 128) {
      │ [31m                           ^^^[0m
[1m   14 │ [0m      # error: int not enum


✖︎ Expected a value of type 'PhotoSize'

  enum-values.invalid.graphql:22:28
   21 │   me {
[1m   22 │ [0m    profilePicture(preset: [LARGE]) {
      │                            ^^^^^^^
   23 │       # error: list of enum, not enum
